--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/style.css">
+    <title>React SPA</title>
   </head>
   <body>
     <div class="container"></div>
